[tool.poetry]
name = "vactracher"
version = "0.1.0"
description = "Tweets about Swiss Covid-19 stats"
authors = ["Philippe Hürlimann <p@hurlimann.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24"
beautifulsoup4 = "^4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
